# MissionForge

./: README.md
missionforge/: docker-compose.yml
missionforge/dashboard/: Dockerfile  app.js  index.html  style.css
missionforge/demo/: inject_fault.py  run_demo.sh
missionforge/legacy_corba_app/: CMakeLists.txt  Dockerfile  docker-entrypoint.sh
missionforge/legacy_corba_app/idl/: Telemetry.idl
missionforge/legacy_corba_app/src/: telemetry_client.cpp  telemetry_server.cpp
missionforge/missionforge_adapter/: Dockerfile  requirements.txt
missionforge/missionforge_adapter/app/: corba_bridge.py  main.py  schemas.py
missionforge/semantic_overlay/: anomaly_detector.py  health_score.py  rules.py
